--- a/dicemodel.ipynb
+++ b/dicemodel.ipynb
@@ -2,26 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 87,
    "id": "10ef0cc9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Manim Community <span style=\"color: #008000; text-decoration-color: #008000\">v0.14.0</span>\n",
-       "\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m14.0\u001b[0m\n",
-       "\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from manim import *\n",
     "    \n",
@@ -685,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 85,
    "id": "de924cc7",
    "metadata": {},
    "outputs": [
@@ -744,8 +728,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "[-2.        -1.3566625  0.       ]\n"
+      "3\n",
+      "[-2.         0.6433375  0.       ]\n"
      ]
     },
     {
@@ -759,7 +743,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
+      "4\n",
       "[-2.        -0.3566625  0.       ]\n"
      ]
     },
@@ -787,7 +771,7 @@
     {
      "data": {
       "text/html": [
-       "<video src=\"media/jupyter/Presentation@2022-02-02@13-42-53.mp4\" controls autoplay loop style=\"max-width: 100%;\"  >\n",
+       "<video src=\"media/jupyter/Presentation@2022-02-03@14-40-35.mp4\" controls autoplay loop style=\"max-width: 100%;\"  >\n",
        "      Your browser does not support the <code>video</code> element.\n",
        "    </video>"
       ],
@@ -800,7 +784,7 @@
     }
    ],
    "source": [
-    "%%manim -qm -v WARNING Presentation\n",
+    "%%manim -ql -v WARNING Presentation\n",
     "\n",
     "\n",
     "config.media_width = \"100%\"\n",
@@ -822,8 +806,8 @@
     "        slide4(self)\n",
     "        self.play(*[FadeOut(mob, scale=0.5)for mob in self.mobjects], run_time=1)\n",
     "\n",
-    "        slide5(self)\n",
-    "        self.play(*[FadeOut(mob, scale=0.5)for mob in self.mobjects], run_time=1)\n",
+    "#         slide5(self)\n",
+    "#         self.play(*[FadeOut(mob, scale=0.5)for mob in self.mobjects], run_time=1)\n",
     "\n",
     "\n",
     "        \n",
@@ -922,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 84,
    "id": "10e21370",
    "metadata": {},
    "outputs": [],
@@ -932,14 +916,14 @@
     "\n",
     "def slide4(self):\n",
     "        def one_step(point=(0,0,0)):\n",
-    "            d = Dot(point = point, radius=.2)\n",
-    "            d1 = d.copy().shift(LEFT)\n",
-    "            d2 = d.copy().shift(RIGHT)\n",
-    "            d3 = d.copy().shift(UP)\n",
-    "            d4 = d.copy().shift(DOWN)\n",
-    "            dots_ = VGroup(d1,d2,d3, d4).set_color(RED)\n",
+    "            d_ = Dot(point = point, radius=.2)\n",
+    "            d1 = d_.copy().shift(LEFT)\n",
+    "            d2 = d_.copy().shift(RIGHT)\n",
+    "            d3 = d_.copy().shift(UP)\n",
+    "            d4 = d_.copy().shift(DOWN)\n",
+    "            dots__ = VGroup(d1,d2,d3, d4).set_color(RED)\n",
     "\n",
-    "            return d,dots_\n",
+    "            return d_,dots__\n",
     "    \n",
     "    \n",
     "# class NumberConformations(Scene):\n",
@@ -955,14 +939,24 @@
     "               \n",
     "        point = n_plane.coords_to_point(0,0)\n",
     "        dot_keeper = VGroup()\n",
+    "        prev_dot = None\n",
+    "        prev_dots = VGroup()\n",
     "        \n",
     "        for i in range(5):\n",
     "            print(point)\n",
     "\n",
     "\n",
     "            d, dots_ = one_step(point)\n",
-    "            self.add(d, dots_)\n",
-    "        \n",
+    "#             self.play()\n",
+    "            if prev_dot:\n",
+    "#                 self.play(prev_dot.copy().animate.move_to(point), )\n",
+    "#                 self.remove(d,prev_dot)\n",
+    "                self.add(d)\n",
+    "            else:\n",
+    "                self.add(d)\n",
+    "            self.add(dots_)\n",
+    "\n",
+    "\n",
     "            for dot in dots_:\n",
     "              self.play(Flash(dot))  \n",
     "            \n",
@@ -973,6 +967,10 @@
     "            point += option[direction]\n",
     "            self.remove(dots_)\n",
     "            dot_keeper.add(d)\n",
+    "            prev_dot = d\n",
+    "            prev_dots.add(prev_dot)\n",
+    "        \n",
+    "        self.remove(prev_dots)\n",
     "\n",
     "        self.wait(2)\n",
     "        group  = VGroup(n_plane, dot_keeper)\n",
@@ -1340,7 +1338,7 @@
   {
    "cell_type": "code",
    "execution_count": 298,
-   "id": "91de68a5",
+   "id": "635e3a06",
    "metadata": {},
    "outputs": [
     {
@@ -1363,31 +1361,187 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "547e9621",
+   "id": "b515b3e9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                                                                                       \r"
+     ]
+    }
+   ],
+   "source": [
+    "%%manim -v WARNING -ql Model\n",
+    "\n",
+    "class Model(Scene):\n",
+    "    \n",
+    "    def construct(self):\n",
+    "        \n",
+    "        title = Title('Model')\n",
+    "        self.play(Write(title))\n",
+    "#         self.remove(title)\n",
+    "#         title1 = Title('Model')\n",
+    "#         self.add_fixed_in_frame_mobjects(title1)\n",
+    "#         self.play(Write(title))\n",
+    "    \n",
+    "        self.wait(1)\n",
+    "        \n",
+    "        stretch1 = Tex(r\"\"\"$U_{stretch} = \\sum_i\\kappa\\frac{(l_i-l_0)^2}{2},$\"\"\")\n",
+    "        \n",
+    "        stretch2 = Tex(r\"\"\"\\begin{itemize}\n",
+    "\\item $l_i$ -- bond length between beads\n",
+    "\\item $\\kappa$ -- stretching constant\n",
+    "\\item $l_0$ -- equilibrium length\n",
+    "\\end{itemize}\"\"\")\n",
+    "        stretch = VGroup(stretch1, stretch2.scale(.7).next_to(stretch1, DOWN, aligned_edge=LEFT))\n",
+    "        \n",
+    "        self.play(Write(stretch), run_time=2)\n",
+    "        self.play(stretch.set_color(YELLOW).animate.scale(.8).next_to(title, DOWN, aligned_edge=LEFT))\n",
+    "        self.wait(1)\n",
+    "        \n",
+    "        tracker = ValueTracker(1)\n",
+    "        \n",
+    "        sine = always_redraw(\n",
+    "            lambda: FunctionGraph(lambda t: .3*np.sin(10*t*2*PI/tracker.get_value()), x_range=[0, tracker.get_value()]).move_to(UP+2*RIGHT)\n",
+    "        )\n",
+    "        circle1 = always_redraw(\n",
+    "            lambda: Circle(radius=.5, color=BLUE_B, fill_color=ORANGE, fill_opacity=1).move_to(sine.get_start())\n",
+    "        )\n",
+    "        circle2 = always_redraw(\n",
+    "            lambda:  circle1.copy().move_to(sine.get_end())\n",
+    "        )\n",
+    "        \n",
+    "        \n",
+    "                             \n",
+    "        self.add(sine, circle1, circle2)\n",
+    "        self.play(tracker.animate.set_value(5), run_time=.3)\n",
+    "        self.play(tracker.animate.set_value(2), run_time=.4)\n",
+    "        self.play(tracker.animate.set_value(4), run_time=.5)\n",
+    "#         self.play(tracker.animate.increment_value(-.5))\n",
+    "\n",
+    "        self.play(tracker.animate.set_value(3), run_time=.7)\n",
+    "        \n",
+    "    \n",
+    "        text12 = Tex(\"$l_0$\").next_to(sine,UP)\n",
+    "        for i in range(3):\n",
+    "            self.play(Indicate(text12), run_time=1)\n",
+    "\n",
+    "        print(sine.get_end())\n",
+    "        spring = VGroup(sine.copy(), circle1.copy(), circle2.copy(), text12)\n",
+    "        self.add(spring.scale(.8).next_to(title, DOWN, aligned_edge=RIGHT))\n",
+    "#         spring = VGroup(sine, circle1, circle2, text12)\n",
+    "#         self.add(sine.next_to(text12, DOWN, aligned_edge=RIGHT))\n",
+    "        print(sine.get_end())\n",
+    "        self.remove(sine, circle1, circle2)\n",
+    "\n",
+    "\n",
+    "\n",
+    "#         self.remove(sine, circle1, circle2)\n",
+    "        \n",
+    "        \n",
+    "#         distr1 = Tex(r\"\"\"$U_{distr} = \\sum_j [-p_j(x_j)],$\"\"\")\n",
+    "#         distr2 = Tex(r\"\"\"\\begin{itemize}\n",
+    "# \\item $p_j$ -- distribution along $x$-axis \n",
+    "# \\item $x_j$ is the selected \"box\"  from $p_j$\n",
+    "# \\end{itemize}\"\"\")\n",
+    "#         distr = VGroup(distr1, distr2.scale(.7).next_to(distr1, DOWN, aligned_edge=LEFT))\n",
+    "#         self.play(Write(distr), run_time=2)\n",
+    "\n",
+    "#         self.play(distr.set_color(YELLOW).animate.scale(.8).next_to(stretch, DOWN, aligned_edge=LEFT))\n",
+    "#         self.wait(1)\n",
+    "\n",
+    "\n",
+    "            \n",
+    "         \n",
+    "#         self.play(Create(sine))\n",
+    "#         self.play(DrawBorderThenFill(circle1), DrawBorderThenFill(circle2))\n",
+    "        \n",
+    "#         axes = ThreeDAxes()#.add_coordinates()\n",
+    "#         self.add(axes.scale(.8).to_edge(DOWN))\n",
+    "#         self.set_camera_orientation(phi=75 * DEGREES, theta=30 * DEGREES)\n",
+    "# #         self.set_camera_orientation(phi=2*PI/5, theta=PI/5)\n",
+    "\n",
+    "\n",
+    "#         sphere1 = Sphere(radius=.3).move_to(axes.coords_to_point(1,2,-2))\n",
+    "#         sphere2 = Sphere(radius=.3).move_to(axes.coords_to_point(1,-1,0))\n",
+    "\n",
+    "\n",
+    "#         self.add(sphere1, sphere2)\n",
+    "#         self.begin_ambient_camera_rotation(rate=0.3)\n",
+    "#         self.wait(3)\n",
+    "#         self.stop_ambient_camera_rotation()\n",
+    "#         self.set_camera_orientation(phi=75 * DEGREES, theta=30 * DEGREES)\n",
+    "        self.wait(2)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "id": "3a6edf5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "556\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                                                                                       \r"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video src=\"media/jupyter/Animate@2022-02-04@11-22-01.mp4\" controls autoplay loop style=\"max-width: 100%;\"  >\n",
+       "      Your browser does not support the <code>video</code> element.\n",
+       "    </video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Video object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%manim -v WARNING -ql Animate\n",
+    "\n",
+    "prefix = \"/Users/alexey/Downloads/togif/\"\n",
+    "figs = [os.path.join(prefix,f) for f in os.listdir(prefix) if f.endswith('png')]\n",
+    "print(len(figs))\n",
+    "\n",
+    "class Animate(Scene):\n",
+    "    \n",
+    "    def construct(self):\n",
+    "        \n",
+    "        title = Title('Animation')\n",
+    "        self.play(Write(title))\n",
+    "        \n",
+    "        l_figs = len(figs)\n",
+    "        for i, fig in enumerate(figs):\n",
+    "            fig = ImageMobject(fig)\n",
+    "        \n",
+    "            self.add(fig.scale(.8).to_edge(DOWN, buff=.1))\n",
+    "            self.wait(.2)\n",
+    "            if i < l_figs:\n",
+    "                self.remove(fig)\n",
+    "\n",
+    "        self.wait(2)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfbe6909",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2943b3be",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b89ebf6a",
+   "id": "48570407",
    "metadata": {},
    "outputs": [],
    "source": []
