--- a/dicemodel.ipynb
+++ b/dicemodel.ipynb
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "b426fdc3",
+   "id": "150e6a2c",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "94530025",
+   "id": "77d1366d",
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 117,
    "id": "76ccdee2",
    "metadata": {},
    "outputs": [
@@ -934,7 +934,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8752908980427873 6 0 0.1388888888888889\n"
+      "0.32646746920071157 8 0 0.1388888888888889\n"
      ]
     },
     {
@@ -948,16 +948,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.1661885879999332 11 0.1388888888888889 0.05555555555555555\n"
+      "0.14576435996924797 2 0.1388888888888889 0.027777777777777776\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "pipe:: Immediate exit requested\n",
-      "Error writing trailer of /Users/alexey/Documents/projects/manim/media/videos/manim/1080p60/partial_movie_files/Slide2/34786186_1793469859_3362912653.mp4: Immediate exit requested\n",
-      "Error closing file /Users/alexey/Documents/projects/manim/media/videos/manim/1080p60/partial_movie_files/Slide2/34786186_1793469859_3362912653.mp4: Immediate exit requested\n",
       "                                                                                                                                                       \r"
      ]
     },
@@ -965,7 +962,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.615687905236839 2 0.05555555555555555 0.027777777777777776\n",
+      "0.5319685467747722 3 0.027777777777777776 0.05555555555555555\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                                                                                       \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.19408471343633893 6 0.05555555555555555 0.1388888888888889\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                                                                                       \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.917706550133536 4 0.1388888888888889 0.08333333333333333\n",
       "no go\n"
      ]
     },
@@ -980,21 +1005,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.34908273818816726 5 0.05555555555555555 0.1111111111111111\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                                                                                       \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.9903968027290223 11 0.1111111111111111 0.05555555555555555\n",
+      "0.9977826725318647 10 0.1388888888888889 0.08333333333333333\n",
       "no go\n"
      ]
     },
@@ -1009,7 +1020,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.020361448683459682 9 0.1111111111111111 0.1111111111111111\n"
+      "0.8068515837258481 5 0.1388888888888889 0.1111111111111111\n",
+      "no go\n"
      ]
     },
     {
@@ -1023,7 +1035,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6359594300967633 5 0.1111111111111111 0.1111111111111111\n"
+      "0.81817109429958 2 0.1388888888888889 0.027777777777777776\n",
+      "no go\n"
      ]
     },
     {
@@ -1037,7 +1050,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9098258526973135 6 0.1111111111111111 0.1388888888888889\n"
+      "0.06631641243384001 10 0.1388888888888889 0.08333333333333333\n"
      ]
     },
     {
@@ -1051,21 +1064,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.42302674814861696 6 0.1388888888888889 0.1388888888888889\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                                                                                       \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.37027668490526566 9 0.1388888888888889 0.1111111111111111\n"
+      "0.2738102027005709 6 0.08333333333333333 0.1388888888888889\n"
      ]
     },
     {
@@ -1078,7 +1077,7 @@
     {
      "data": {
       "text/html": [
-       "<video src=\"media/jupyter/Slide3@2022-02-07@19-23-44.mp4\" controls autoplay loop style=\"max-width: 100%;\"  >\n",
+       "<video src=\"media/jupyter/Slide3@2022-02-07@21-44-27.mp4\" controls autoplay loop style=\"max-width: 100%;\"  >\n",
        "      Your browser does not support the <code>video</code> element.\n",
        "    </video>"
       ],
@@ -1135,7 +1134,7 @@
     "                      tex_template=texfont)\n",
     "    #     solution = Tex(\"$ f(x)=\\\\begin{cases} 1, & \\\\text{if \\$x<0\\$}.\\\\ 0, & \\\\text{otherwise}.\\\\end{cases}$\")\n",
     "\n",
-    "        eqns = Tex(\"$acc(o\\\\rightarrow n)=\\\\begin{cases} 1 \\\\text{if }p_n<p_o \\\\\\\\p_n/p_o, \\\\text{, otherwise }  \\\\end{cases}$\",\n",
+    "        eqns = Tex(\"$acc(o\\\\rightarrow n)=\\\\begin{cases} 1 \\\\text{, if }p_n>p_o \\\\\\\\p_n/p_o \\\\text{, otherwise }  \\\\end{cases}$\",\n",
     "                   tex_template=texfont, font_size=texfontsize)\n",
     "\n",
     "        code = \"\"\"\n",
@@ -1161,6 +1160,8 @@
     "            direction=np.array([0,-1,0]), aligned_edge=RIGHT, buff=.4).next_to(title,DR).align_to(title, RIGHT)\n",
     "\n",
     "        self.play(ShowIncreasingSubsets(text), run_time=10)#, text5.next_to(text,DR).align_to(text, RIGHT))\n",
+    "        \n",
+    "        self.wait(3)\n",
     "    #     self.play(Circumscribe(text1[2]), run_time=3)\n",
     "    #     self.add(balance.next_to(text5,DR).align_to(text5, RIGHT))\n",
     "    #     self.add(eqns.next_to(balance,DR).align_to(balance, RIGHT))\n",
@@ -1401,24 +1402,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 115,
    "id": "de924cc7",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<string>, line 29)",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
-      "  File \u001b[1;32m~/Documents/projects/manim/venv/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3251\u001b[0m in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  Input \u001b[1;32mIn [82]\u001b[0m in \u001b[1;35m<module>\u001b[0m\n    get_ipython().run_cell_magic('manim', '-ql -v WARNING Presentation', '\\n\\nconfig.media_width = \"100%\"\\n\\n\\nclass Presentation(Scene):\\n    \\n    def construct(self):\\n        \\n       \\n#         intro(self)\\n#         self.play(*[FadeOut(mob, scale=0.5)for mob in self.mobjects], )\\n#         slide1(self)\\n#         self.play(*[FadeOut(mob, scale=0.5)for mob in self.mobjects], )\\n#         slide2(self)\\n#         self.play(*[FadeOut(mob, scale=0.5)for mob in self.mobjects], run_time=5)\\n#         slide3(self)\\n#         self.play(*[FadeOut(mob, scale=0.5)for mob in self.mobjects], run_time=1)\\n#         slide4(self)\\n#         self.play(*[FadeOut(mob, scale=0.5)for mob in self.mobjects], run_time=1)\\n#         slide5(self)\\n#         self.play(*[FadeOut(mob, scale=0.5)for mob in self.mobjects], run_time=1)\\n\\n#         slide6(self)\\n#         self.play(*[FadeOut(mob, scale=0.5)for mob in self.mobjects], run_time=1)\\n\\n\\n        \\n        \\n')\n",
-      "  File \u001b[1;32m~/Documents/projects/manim/venv/lib/python3.9/site-packages/IPython/core/interactiveshell.py:2257\u001b[0m in \u001b[1;35mrun_cell_magic\u001b[0m\n    result = fn(*args, **kwargs)\n",
-      "\u001b[0;36m  File \u001b[0;32m~/Documents/projects/manim/venv/lib/python3.9/site-packages/manim/utils/ipython_magic.py:107\u001b[0;36m in \u001b[0;35mmanim\u001b[0;36m\u001b[0m\n\u001b[0;31m    exec(cell, local_ns)\u001b[0m\n",
-      "\u001b[0;36m  File \u001b[0;32m<string>:29\u001b[0;36m\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# %%manim -ql -v WARNING Presentation\n",
     "\n",
@@ -1868,10 +1855,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "id": "396e249d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                                                                                       \r"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video src=\"media/jupyter/Slide6@2022-02-07@19-48-22.mp4\" controls autoplay loop style=\"max-width: 100%;\"  >\n",
+       "      Your browser does not support the <code>video</code> element.\n",
+       "    </video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Video object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%manim -qh -v WARNING Slide6\n",
     "\n",
@@ -1879,7 +1888,7 @@
     "    \n",
     "    def construct(self):\n",
     "        \n",
-    "        title = Title('Fork-plots approach')\n",
+    "        title = Title('Fork-plots-based approach')\n",
     "        self.play(Write(title))\n",
     "        \n",
     "        axes = Axes(x_range=[0,5,1], y_range=[0,2,1]).scale(.9)\n",
@@ -1908,14 +1917,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "id": "77e17ec8",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                                                                                       \r"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video src=\"media/jupyter/Slide7@2022-02-07@20-00-43.mp4\" controls autoplay loop style=\"max-width: 100%;\"  >\n",
+       "      Your browser does not support the <code>video</code> element.\n",
+       "    </video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Video object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "%%manim -v WARNING -qk Slide7\n",
+    "%%manim -v WARNING -qh Slide7\n",
     "\n",
     "class Slide7(Scene):\n",
     "    \n",
@@ -1945,7 +1976,7 @@
     "                           var_type=Integer).scale(.8).align_to(title, RIGHT).shift(.5*LEFT)\n",
     "        self.play(Create(counter))\n",
     "        \n",
-    "        self.wait(2)\n",
+    "        self.wait(3)\n",
     "\n",
     "        n_samples=500\n",
     "        xo=0\n",
@@ -2084,10 +2115,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "b515b3e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                                                                                       \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3.5 1.  0. ]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                                                                                       \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3.5 1.  0. ]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                                                                                       \r"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video src=\"media/jupyter/Slide9@2022-02-07@20-24-39.mp4\" controls autoplay loop style=\"max-width: 100%;\"  >\n",
+       "      Your browser does not support the <code>video</code> element.\n",
+       "    </video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Video object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%manim -v WARNING -qh Slide9\n",
     "\n",
@@ -2192,9 +2273,9 @@
     "        self.play(Write(utot), run_time=2)\n",
     "        self.play(utot.set_color(YELLOW).animate.scale(.7).next_to(distr, 4*DOWN, aligned_edge=LEFT))\n",
     "        self.play(Write(SurroundingRectangle(utot, corner_radius=0.1, buff=0.2)))\n",
+    "        self.wait(3)\n",
     "\n",
-    "\n",
-    "        self.play(*[FadeOut(mob, scale=0.5)for mob in self.mobjects], run_time=1)\n",
+    "        self.play(*[FadeOut(mob, scale=0.5)for mob in self.mobjects], run_time=3)\n",
     "        \n",
     "        "
    ]
@@ -2238,8 +2319,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "id": "48570407",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                                                                                       \r"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video src=\"media/jupyter/Outro@2022-02-07@20-35-05.mp4\" controls autoplay loop style=\"max-width: 100%;\"  >\n",
+       "      Your browser does not support the <code>video</code> element.\n",
+       "    </video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Video object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%manim -v WARNING -qh Outro\n",
+    "\n",
+    "\n",
+    "class Outro(Scene):\n",
+    "    \n",
+    "    def construct(self):\n",
+    "        \n",
+    "        text1 = Text('What is larger?')\n",
+    "        self.play(Write(text1))\n",
+    "        text = Tex(r\"$2^{222}$\", \" or \"  ,r\"$22^{22}$\", \" or \" ,r\"$222^2$\", font_size=80)\n",
+    "        self.add(text.next_to(text1, DOWN))\n",
+    "        self.wait(3)\n",
+    "        \n",
+    "       # self.play(*[FadeOut(mob, scale=0.5)for mob in self.mobjects], run_time=1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48dac646",
    "metadata": {},
    "outputs": [],
    "source": []
